theme/static/css/all.css
@charset "UTF-8";
/* this is whatever css just to make it more fancy */
@import url("https://fonts.googleapis.com/css?family=Dancing+Script|Roboto|Inconsolata");
.no-spacing, *, ol ol, ul ul, nav ul, nav ul li {
  margin: 0;
  padding: 0; }

body {
  font-family: "Roboto", sans-serif; }

#main, nav ul li {
  clear: both;
  margin-left: auto;
  margin-right: auto;
  margin-bottom: 2em;
  max-width: 40em;
  min-height: 800px; }

.wrapper {
  margin-left: auto;
  margin-right: auto;
  margin: 2%; }

.window {
  background: #051005;
  color: #2e3436;
  font-size: medium; }

header.window {
  border-bottom: 4px solid lightslategrey; }

.window a, .window a:visited, #sitename {
  background-clip: text;
  -webkit-background-clip: text; }

.window a {
  text-shadow: 0 0 0.4em #30bb30;
  background-color: #30bb30; }
.window a, .window a:visited, .window #sitename {
  color: transparent;
  background-clip: text;
  background-image: repeating-linear-gradient(3deg, transparent, transparent 3%, black 3%, black 5%, transparent 5%, transparent 10%);
  background-position: 0px 0px;
  background-size: 100% 50px;
  animation: animatedBackground 40s linear infinite;
  -webkit-animation: animatedBackground 40s linear infinite; }
.window a:visited {
  text-shadow: 0 0 0.2em #b0ffb0, 0 0 0.4em #b0ffb0, 0 0 0.8em #b0ffb0, 0 0 1.6em #b0ffb0;
  background-color: #b0ffb0; }

a {
  color: black;
  text-shadow: 0 0 0.05em #30bb30;
  border-radius: 3px;
  display: inline-block;
  text-decoration: none; }

a.tag, .entry-content a {
  text-decoration: underline; }

a:first-letter {
  color: #729fcf;
  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black; }

a.tag:first-letter {
  color: #2e3436;
  text-shadow: none; }

.entry-content {
  margin-top: 0.5em;
  overflow: hidden; }

.entry-content figure {
  overflow: hidden; }

.entry-content a:first-letter {
  color: lightslategrey;
  text-shadow: none; }

a:visited {
  color: lightslategrey;
  text-shadow: 0 0 0.2em lightslategrey, 0 0 0.4em lightslategrey, 0 0 0.8em lightslategrey, 0 0 1.6em lightslategrey; }

a:hover:first-letter, a.tag:hover:first-letter, .entry-content a:hover:first-letter {
  color: #ffff54; }

a:hover, #sitename:hover {
  color: white;
  background: #30bb30; }

.entry-content a {
  margin-right: -4px;
  margin-left: -4px;
  padding-left: 4px;
  padding-right: 4px;
  display: inline; }
  .entry-content a + a {
    margin-left: 0px; }
.entry-content span + a {
  margin-left: 0px; }
.entry-content tr a {
  margin: 0; }

a:active {
  text-decoration: underline;
  text-decoration-color: #54ffff; }

footer.window {
  text-align: center;
  width: 100%;
  border-top: 4px solid lightslategrey; }

footer.pagination {
  margin-top: 2em;
  display: flex;
  justify-content: space-between;
  align-items: center;
  gap: 1em; }

footer p + p {
  text-indent: 0; }

#sidebar {
  width: 20%;
  margin-left: auto;
  display: inline-block;
  margin-right: 1%;
  text-align: left;
  vertical-align: top;
  padding: 0.5; }

#content {
  width: 53%;
  margin-right: auto;
  display: inline-block;
  text-align: left;
  vertical-align: top;
  padding-left: 3%;
  padding-right: 3%;
  padding-top: 4%;
  padding-bottom: 1%;
  border-top: 2px solid #051005;
  border-bottom: 2px solid #051005;
  position: relative;
  z-index: 1; }

.padded {
  margin: 2%; }

#recent_posts {
  list-style: none; }

li {
  list-style-position: outside;
  padding-left: 1em;
  margin-left: 1em; }

ol {
  margin: 1em; }
  ol ol {
    margin-left: 1em; }

ul {
  margin: 1em; }
  ul ul {
    margin-left: 1em; }

nav ul li:hover h3 {
  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black; }

nav {
  display: block;
  /* border: 1px solid $col-border */
  width: 100%;
  margin-top: 1em; }
  nav ul {
    list-style: none;
    text-align: justify;
    text-align-last: justify;
    margin: 0 20em; }
    nav ul li {
      overflow: hidden;
      text-align: center;
      display: inline; }
      nav ul li .description {
        font-size: 0.4em; }
      nav ul li h2 {
        font-size: 1.5em; }

.navigation li {
  margin: 0 auto; }

.navigation li a, #recent_posts li {
  display: inline-block; }

.bracket {
  display: inline-block;
  vertical-align: super; }

.category-glyph {
  height: 1em;
  /* this works cause its inline?? */
  vertical-align: middle; }

.link {
  display: inline-block;
  font-family: "Fira Mono", monospace;
  text-align: center;
  text-align-last: center; }

p {
  overflow-wrap: break-word;
  line-height: 1.3; }
  p a {
    color: black; }
  p + p {
    text-indent: 1.375em;
    margin-top: 0; }
    p + p > img {
      margin-left: -1.375em; }

.entry-content p, pre, table {
  line-height: 1.5rem;
  margin-top: 1.5rem; }

.entry-content sup {
  line-height: 0; }

footer ul li {
  width: 49%; }

ul.horizontal {
  list-style: none; }

ul.horizontal li {
  text-align: left;
  display: inline-block; }

/* Move title into center */
#title {
  clear: both;
  overflow: hidden;
  position: relative;
  margin-bottom: -2px; }
  #title h1 {
    text-align: center; }

#sitename {
  font-size: 3.25em;
  font-family: "Dancing Script", cursive;
  /* $col-flash */
  /* color: $window-link */
  padding-left: 1em;
  padding-right: 1em;
  text-shadow: 0 0 0.4em #30bb30;
  background-color: #30bb30; }

@keyframes animatedBackground {
  from {
    background-position: 0 0; }
  to {
    /* background-position: 3px 50px */ } }
#sitename:first-letter {
  color: transparent;
  text-shadow: 0 0 0.4em #30bb30; }

#sitename:hover:first-letter {
  color: #ffff54; }

pre {
  font-family: "Inconsolata", "DejaVu Sans Mono", "Bitstream Vera Sans Mono", monospace;
  white-space: pre-wrap;
  white-space: -moz-pre-wrap;
  white-space: -pre-wrap;
  white-space: -o-pre-wrap;
  word-wrap: break-word;
  -moz-tab-size: 4;
  tab-size: 4;
  border-top: 1px dotted #051005;
  border-bottom: 1px dotted #051005;
  padding: 0.25em; }

.entry-content h3 {
  font-weight: lighter; }
/* ... */

